# r

./: Dockerfile  LICENSE  README.md  setup.cfg
.github/workflows/: classroom.yml  github.yml  main.yml
person_service/api/: views.py
person_service/person_service/: settings.py
person_service/tests/: test_api.py
postman/: [inst][heroku] Lab1.postman_environment.json
