[metadata]
name = api
description = A totally awesome API that allows you to do almost anything
author = Max Gorshkov
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    api
install_requires =
    asgiref==3.5.2
    Django==4.1.1
    django-cors-headers==3.13.0
    djangorestframework==3.14.0
    psycopg2==2.9.3
    pytz==2022.2.1
    sqlparse==0.4.2
    tzdata==2022.2
python_requires = >=3.6
package_dir =
    =person_service
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    flake8>=3.9

[options.package_data]
api = py.typed

[flake8]
max-line-length = 160